Fix spacing bug

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,7 +1,7 @@
 @use "../styles/breakpoints.scss";
 
 .downloadPDF {
-    height: 2em;
+    height: 2rem;
     align-items: center;
     display: flex;
     justify-content: center;
